--- a/index.ipynb
+++ b/index.ipynb
@@ -87,20 +87,47 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "<class 'str'>\n",
-    "119846\n",
-    "﻿***The Project Gutenberg's Etext of Shakespeare's First Folio***\n",
-    "********************The Tragedie of Macbeth*********************\n",
+    "import string\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "This is our 3rd edition of most of these plays.  See the index.\n",
+    "%matplotlib inline\n",
     "\n",
+    "#Splits words and filters non-alphanumeric\n",
+    "macbeth_wordlist = list(filter(str.isalnum, macbeth.split(' ')))\n",
+    "#print(macbeth_wordlist)\n",
+    "macbeth_worddict = dict()\n",
+    "for word in macbeth_wordlist:\n",
+    "    word_lower = word.lower()\n",
+    "    macbeth_worddict[word_lower] = macbeth_worddict.get(word_lower, 0) + 1\n",
+    "    \n",
+    "sort_macbeth = list(reversed(sorted(macbeth_worddict.items(), key = lambda kv:(kv[1], kv[0]))))[:25]\n",
+    "#print(sort_macbeth)\n",
+    "    \n",
+    "x = []\n",
+    "y = []\n",
+    "for words in sort_macbeth:\n",
+    "    x.append(words[0])\n",
+    "    y.append(words[1])\n",
+    "    \n",
+    "plt.figure(figsize=(10,8))\n",
     "\n",
-    "Copyright laws are changing all over the world, be sure to check\n",
-    "the copyright laws for your country before posting these files!!\n",
+    "plt.bar(x, y, label='MacBeth Word count')\n",
     "\n",
-    "Please take a look at the important information in this header.\n",
-    "We encourage you to keep this file on your own disk, keeping an\n",
-    "electronic path open for the nex\n"
+    "plt.xlabel('Most Used Words')\n",
+    "plt.ylabel('Quantities')\n",
+    "\n",
+    "plt.title('Macbeth Most Used words')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "# Pseudo-code Outline\n",
+    "# Split the transcript into words\n",
+    "# Create a dictionary\n",
+    "# Iterate through the text of Macbeth\n",
+    "# Update word counts\n",
+    "# Create Bar Graph\n",
+    "# Include descriptive titles and labels"
    ]
   },
   {
